fix input issues and align choices container

--- a/src/scss/_flight-form.scss
+++ b/src/scss/_flight-form.scss
@@ -15,6 +15,7 @@
         max-height: 20rem;
         overflow-y: scroll;
         overflow-x: hidden;
+        left: 1em;
 
         &::-webkit-scrollbar {
             width: 17.5px;
