--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -127,6 +127,7 @@ a,
   max-height: 20rem;
   overflow-y: scroll;
   overflow-x: hidden;
+  left: 1em;
 }
 .flight-location-form .flight-location-form__container::-webkit-scrollbar {
   width: 17.5px;
